settting up global scss

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Ace Story</title>
     <!-- <base href="https://aceknight97.github.io/acestory/" /> -->
-    <base href="/" />
+    <!-- href="../src/app/styles/_colors.scss" -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <base href="/" />
+    <!-- <link src="src/app/styles/_colors.css" rel="stylesheet" /> -->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
